--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:              http://localhost:4000
 # Owner/author information
 owner:
   name:           Sven Sporer
-  avatar:         bio-photo.jpg
+  avatar:         sven.png
   email:          sven@intothespirit.com
   # Social networking links used in footer. Update and remove as you like.
   twitter:        sohooo
