--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,8 @@ markdown:    kramdown
 # https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink:   /:categories/:title
 
+excerpt_separator: "\n\n"
+
 kramdown:
   auto_ids: true
   footnote_nr: 1
