--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ links:
 timezone:    Europe/Vienna
 future:      true
 # pygments:    true
-markdown:    kramdown
+markdown:    redcarpet
 highlighter: pygments
 
 # https://github.com/mojombo/jekyll/wiki/Permalinks
@@ -50,24 +50,24 @@ permalink:   /:categories/:title
 
 excerpt_separator: "\n\n"
 
-kramdown:
-  input: GFM
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  header_offset: 0
-  transliterated_header_ids: true
-  use_coderay: false
-
-  coderay:
-    coderay_line_numbers:
-    coderay_line_numbers_start: 1
-    coderay_tab_width: 4
-    coderay_bold_every: 10
-    coderay_css: class
+# kramdown:
+#   input: GFM
+#   auto_ids: true
+#   footnote_nr: 1
+#   entity_output: as_char
+#   toc_levels: 1..6
+#   smart_quotes: lsquo,rsquo,ldquo,rdquo
+#   header_offset: 0
+#   transliterated_header_ids: true
+#   use_coderay: false
+#
+#   coderay:
+#     coderay_line_numbers:
+#     coderay_line_numbers_start: 1
+#     coderay_tab_width: 4
+#     coderay_bold_every: 10
+#     coderay_css: class
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules"]
-gems: ['coderay_bash']
+# gems: ['coderay_bash']
